
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int UINT ;


 int ConbinePath (char*,int ,char*,char*) ;

void CombinePath(char *dst, UINT size, char *dirname, char *filename)
{
 ConbinePath(dst, size, dirname, filename);
}
